add new website from server na

--- a/xem-phim-moi/monkey-man-bao-thu/index.html
+++ b/xem-phim-moi/monkey-man-bao-thu/index.html
@@ -1203,7 +1203,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1793,18 +1793,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/de-che-tan-bao" title="Đế Chế Tàn Bạo">
+          <a class="list-top-movie-link" href="/phim-moi/banh-my-2" title="Bánh Mỹ 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/de-che-tan-bao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/banh-my-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đế Chế Tàn Bạo
+             Bánh Mỹ 2
             </span>
             <span class="list-top-movie-item-en">
-             Viking Legacy
+             American Pie 2
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1815,21 +1815,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/molang" title="Molang">
+          <a class="list-top-movie-link" href="/phim-moi/tuan-loc-be-con" title="Tuần lộc bé con">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/molang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuan-loc-be-con-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Molang
+             Tuần lộc bé con
             </span>
             <span class="list-top-movie-item-en">
-             Molang
+             Baby Reindeer
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1837,40 +1837,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tenpuru-no-one-can-live-on-loneliness" title="TenPuru: No One Can Live on Loneliness">
+          <a class="list-top-movie-link" href="/phim-moi/giac-mong-tay-du-2-thiet-phien-cong-chua" title="Giấc mộng tây du 2: Thiết phiến công chúa">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tenpuru-no-one-can-live-on-loneliness-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giac-mong-tay-du-2-thiet-phien-cong-chua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             TenPuru: No One Can Live on Loneliness
+             Giấc mộng tây du 2: Thiết phiến công chúa
             </span>
             <span class="list-top-movie-item-en">
-             Tenpuru
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lang-nha-bang" title="Lang Nha Bảng">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-nha-bang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lang Nha Bảng
-            </span>
-            <span class="list-top-movie-item-en">
-             Nirvana in Fire
+             Dream Journey 2: Princess Iron Fan
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1881,21 +1859,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cia-tai-xuat-2" title="CIA tái xuất 2">
+          <a class="list-top-movie-link" href="/phim-moi/thu-6-ngay-13-phan-2" title="Thứ 6 Ngày 13 Phần 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cia-tai-xuat-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thu-6-ngay-13-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             CIA tái xuất 2
+             Thứ 6 Ngày 13 Phần 2
             </span>
             <span class="list-top-movie-item-en">
-             RED 2
+             Friday the 13th Part 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vua-hai-tac-3d2y-vuot-qua-cai-chet-cua-ace-loi-hua-cua-luffy-va-nhung-nguoi-ban" title="Vua Hải Tặc 3D2Y: Vượt qua cái chết của Ace! Lời hứa của Luffy và những người bạn!">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-hai-tac-3d2y-vuot-qua-cai-chet-cua-ace-loi-hua-cua-luffy-va-nhung-nguoi-ban-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vua Hải Tặc 3D2Y: Vượt qua cái chết của Ace! Lời hứa của Luffy và những người bạn!
+            </span>
+            <span class="list-top-movie-item-en">
+             One Piece 3D2Y crosses the death of Ace! Pledge with Luffy partners
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
