add new website from server na

--- a/xem-phim-bo/loi-noi-doi-khong-the-cuong-lai/index.html
+++ b/xem-phim-bo/loi-noi-doi-khong-the-cuong-lai/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1632,7 +1632,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1653,21 +1653,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-con-cho-dia-nguc" title="Những Con Chó Địa Ngục">
+          <a class="list-top-movie-link" href="/phim-moi/tallulah" title="Tallulah">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-con-cho-dia-nguc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tallulah-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Con Chó Địa Ngục
+             Tallulah
             </span>
             <span class="list-top-movie-item-en">
-             Hell Dogs
+             Tallulah
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1675,18 +1675,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-dau-toc-xam" title="Cô dâu tóc xám">
+          <a class="list-top-movie-link" href="/phim-moi/8090" title="8090">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-dau-toc-xam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/8090-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô dâu tóc xám
+             8090
             </span>
             <span class="list-top-movie-item-en">
-             the Grey Hair Bride
+             Octogenarians And The 90s
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1697,65 +1697,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dai-nhac-hoi-roi" title="Đại nhạc hội rối">
+          <a class="list-top-movie-link" href="/phim-moi/in-the-cut" title="In the Cut">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-nhac-hoi-roi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/in-the-cut-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đại nhạc hội rối
+             In the Cut
             </span>
             <span class="list-top-movie-item-en">
-             The Muppets
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dau-tri" title="Đấu Trí">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dau-tri-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đấu Trí
-            </span>
-            <span class="list-top-movie-item-en">
-             Michael Clayton
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/duong-ba-ho-thau-thien-hoan-nhat" title="Đường Bá Hổ: Thâu Thiên Hoán Nhật">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-ba-ho-thau-thien-hoan-nhat-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đường Bá Hổ: Thâu Thiên Hoán Nhật
-            </span>
-            <span class="list-top-movie-item-en">
-             The Story of Tangbohu
+             In the Cut
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/khong-co-loi-tam-biet" title="Không có lời tạm biệt">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-co-loi-tam-biet-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Không có lời tạm biệt
+            </span>
+            <span class="list-top-movie-item-en">
+             Without Saying Goodbye
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/doi-song-nguc-tu" title="Đời sống ngục tù">
+           <span class="status">
+            HD Vietsub + Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-song-nguc-tu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đời sống ngục tù
+            </span>
+            <span class="list-top-movie-item-en">
+             Prison Playbook
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
