add new website from server na

--- a/xem-phim-bo/loi-noi-doi-khong-the-cuong-lai/index.html
+++ b/xem-phim-bo/loi-noi-doi-khong-the-cuong-lai/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1653,18 +1653,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tallulah" title="Tallulah">
+          <a class="list-top-movie-link" href="/phim-moi/cocomelon-phan-6" title="Cocomelon (Phần 6)">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tallulah-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cocomelon-phan-6-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tallulah
+             Cocomelon (Phần 6)
             </span>
             <span class="list-top-movie-item-en">
-             Tallulah
+             Cocomelon (Season 6)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1675,21 +1675,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/8090" title="8090">
+          <a class="list-top-movie-link" href="/phim-moi/truy-cau" title="Truy Cầu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/8090-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-cau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             8090
+             Truy Cầu
             </span>
             <span class="list-top-movie-item-en">
-             Octogenarians And The 90s
+             Chasing Love
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1697,21 +1697,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/in-the-cut" title="In the Cut">
+          <a class="list-top-movie-link" href="/phim-moi/phuc-thu" title="Phục Thù">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/in-the-cut-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phuc-thu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             In the Cut
+             Phục Thù
             </span>
             <span class="list-top-movie-item-en">
-             In the Cut
+             Vengeance
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1719,21 +1719,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khong-co-loi-tam-biet" title="Không có lời tạm biệt">
+          <a class="list-top-movie-link" href="/phim-moi/minh-oi-xin-dung-qua-song" title="Mình Ơi, Xin Đừng Qua Sông">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-co-loi-tam-biet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/minh-oi-xin-dung-qua-song-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Không có lời tạm biệt
+             Mình Ơi, Xin Đừng Qua Sông
             </span>
             <span class="list-top-movie-item-en">
-             Without Saying Goodbye
+             My Love, Don't Cross That River
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1741,18 +1741,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-song-nguc-tu" title="Đời sống ngục tù">
+          <a class="list-top-movie-link" href="/phim-moi/loi-nguyen-tren-bien" title="Lời Nguyền Trên Biển">
            <span class="status">
-            HD Vietsub + Thuyết Minh
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-song-nguc-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-nguyen-tren-bien-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đời sống ngục tù
+             Lời Nguyền Trên Biển
             </span>
             <span class="list-top-movie-item-en">
-             Prison Playbook
+             Mary
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
